Fixed issue with incorrect task status updates when tasks dropped into new lane by extracting exact ID ('to-do', 'in-progress', 'done') in the  function. Removed TODO comments and added descriptive explanations in comments explaining what mostly everything. Improved visibility of dragged task elements.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -15,6 +15,19 @@ body {
   cursor: grab;
 }
 
-/* .h-100 {
+/* Makes the task take up most of the width of column */
+.h-100 {
   width: 400%;
-} */
+}
+
+/* Keeps the dragged clone element on top */
+.ui-draggable-dragging {
+  z-index: 1000; 
+}
+
+/* Using this to style the dragged clone, it was taking up entire length of column before and this was the easiest way to fix it */
+.ui-draggable-helper {
+  width: 100% !important;
+  height: 25% !important; 
+  pointer-events: none; 
+}
